--- a/AutoScript/README
+++ b/AutoScript/README
@@ -1,3 +1,3 @@
-```
+```bash
 cd /root && wget https://raw.githubusercontent.com/honorcnboy/oracle_keep_alive/main/AutoScript/autoscript.sh && chmod +x autoscript.sh && ./autoscript.sh
 ```
